# tuidaw

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  NEXT_STEPS.md  ORCHESTRATOR.md  README.md  REFACTOR1.md  REFACTOR2.md  SAMPLER.md  TASKS.md  UNWIRED.md  config.toml  fat_bass.scd  inbox2.txt  keybindings.json  keybindings.toml  logo.txt
.cargo/: config.toml
docs/: ai-coding-affordances.md  architecture.md  audio-routing.md  custom-synthdef-plan.md  files-saves-thoughts.org  keybindings.md  phase2-spec.md  polyphonic-voice-allocation.md
src/: config.rs  dispatch.rs  main.rs  main.rs.bak  playback.rs  scd_parser.rs  setup.rs
src/audio/: bus_allocator.rs  engine.rs  engine.rs.bak  mod.rs  osc_client.rs
src/midi/: mod.rs
src/panes/: add_pane.rs  add_pane.rs.bak  edit_pane.rs  file_browser_pane.rs  frame_edit_pane.rs  help_pane.rs  home_pane.rs  instrument_edit_pane.rs  instrument_pane.rs  instrument_pane.rs.bak  logo_pane.rs  mixer_pane.rs  mod.rs  piano_roll_pane.rs  rack_pane.rs  sample_chopper_pane.rs  sequencer_pane.rs  server_pane.rs  strip_edit_pane.rs  strip_pane.rs  track_pane.rs  waveform_pane.rs
src/state/: automation.rs  automation.rs.bak  custom_synthdef.rs  drum_sequencer.rs  instrument.rs  instrument.rs.bak  instrument_state.rs  midi_recording.rs  (+14 more)
synthdefs/: compile.scd  ilex_midi.scsyndef  ilex_sc_comp.scsyndef  ilex_tape_comp.scsyndef  tuidaw_gate.scsyndef  tuidaw_lfo.scsyndef  tuidaw_sampler.scsyndef  tuidaw_sampler_oneshot.scsyndef  tuidaw_saw.scsyndef  tuidaw_sin.scsyndef  tuidaw_sqr.scsyndef  tuidaw_tri.scsyndef
tests/: e2e_test.rs
(+16 files in other folders)
