[package]
name = "tuidaw"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"
rusqlite = { version = "0.31", features = ["bundled"] }
rosc = "0.10"
midir = "0.9"
regex = "1"
dirs = "5"
hound = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
